--- a/MIS.CA/MIS.CA/appsettings.json
+++ b/MIS.CA/MIS.CA/appsettings.json
@@ -4,5 +4,9 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Db": {
+    "ConnectionString": "mongodb://localhost:27017/",
+    "DbName": "tutorial"
+  }
 }
