--- a/MIS.CA/MIS.CA/MIS.CA.csproj
+++ b/MIS.CA/MIS.CA/MIS.CA.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.0" />
+    <PackageReference Include="MongoDB.Driver" Version="2.8.0" />
     <PackageReference Include="SshNet.Security.Cryptography" Version="1.3.0" />
   </ItemGroup>
 
