--- a/MIS.CA/MIS.CA/appsettings.Development.json
+++ b/MIS.CA/MIS.CA/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "mongodb://actaea:g0berth@ds064299.mlab.com:64299/berthbookingdemo"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
