--- a/MIS.CA/MIS.CA/appsettings.json
+++ b/MIS.CA/MIS.CA/appsettings.json
@@ -1,12 +1,10 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "mongodb://actaea:g0berth@ds064299.mlab.com:64299/berthbookingdemo"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
     }
-  },
-  "AllowedHosts": "*",
-  "Db": {
-    "ConnectionString": "mongodb://localhost:27017/",
-    "DbName": "tutorial"
   }
 }
