Update CertificateService in order to use new repository architecture
- remove [Collection] attribute
- modify CertificateController methods in order to return IActionResult and return thrown Exceptions to caller

--- a/MIS.CA/MIS.CA/appsettings.Development.json
+++ b/MIS.CA/MIS.CA/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "mongodb://actaea:g0berth@ds064299.mlab.com:64299/berthbookingdemo"
+    "DefaultConnection": "mongodb://localhost:27017/tutorial"
   },
   "Logging": {
     "LogLevel": {
