--- a/MIS.CA/MIS.CA/appsettings.json
+++ b/MIS.CA/MIS.CA/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "mongodb://actaea:g0berth@ds064299.mlab.com:64299/berthbookingdemo"
+    "DefaultConnection": "mongodb://localhost"
   },
   "Logging": {
     "LogLevel": {
