--- a/MIS.CA/MIS.CA/appsettings.json
+++ b/MIS.CA/MIS.CA/appsettings.json
@@ -2,6 +2,14 @@
   "ConnectionStrings": {
     "DefaultConnection": "mongodb://localhost"
   },
+  "Ssh": {
+    "ServerIp": "192.168.48.72",
+    "Username": "root",
+    "Password": "123456"
+  },
+  "OpenSSL": {
+    "Capass": "int3rmedi@te312gea"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
