--- a/MIS.CA/MIS.CA/appsettings.Development.json
+++ b/MIS.CA/MIS.CA/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "mongodb://localhost:27017/tutorial"
+    "DefaultConnection": "mongodb://localhost:27017/GEA-CAuthority"
   },
   "Ssh": {
     "ServerIp": "192.168.48.72",
@@ -16,5 +16,9 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "Jwt": {
+    "Key": "nZr4t7w!z%C*F-JaNdRgUkXp2s5v8x/A?D(G+KbPeShVmYq3t6w9z$B&E)H@McQf",
+    "Issuer": "geaca.gr"
   }
 }
