--- a/MIS.CA/MIS.CA/appsettings.json
+++ b/MIS.CA/MIS.CA/appsettings.json
@@ -3,7 +3,7 @@
     "DefaultConnection": "mongodb://localhost"
   },
   "Ssh": {
-    "ServerIp": "192.168.1.71",
+    "ServerIp": "192.168.48.72",
     "Username": "root",
     "Password": "123456"
   },
@@ -14,5 +14,9 @@
     "LogLevel": {
       "Default": "Warning"
     }
+  },
+  "Jwt": {
+    "Key": "nZr4t7w!z%C*F-JaNdRgUkXp2s5v8x/A?D(G+KbPeShVmYq3t6w9z$B&E)H@McQf",
+    "Issuer": "geaca.gr"
   }
 }
